cmake_minimum_required(VERSION 3.28)
project(leetcode)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED True)


add_executable(704 Arrays/704.cpp)
add_executable(27 Arrays/27.cpp)
add_executable(977 Arrays/977.cpp)
add_executable(209 Arrays/209.cpp)
add_executable(59 Arrays/59.cpp)
add_executable(58 Arrays/KamaCoder/58.cpp)
add_executable(44 Arrays/KamaCoder/44.cpp)